<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_Register">

    <EditText
        android:id="@+id/txtFullName"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/full_name_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/txtCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblFilter2"
        app:layout_constraintTop_toBottomOf="@+id/lblSettingsHeaderSpot2" />

    <EditText
        android:id="@+id/txtCity"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:ems="15"
        android:fontFamily="@font/open_sans"
        android:hint="@string/home_city_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHighlight="@color/redTheme"
        android:textColorHint="@color/greyTheme"
        android:textColorLink="@color/redTheme"
        android:textCursorDrawable="@color/redTheme"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblFilter3"
        app:layout_constraintTop_toBottomOf="@+id/txtFullName" />

    <ImageView
        android:id="@+id/imgbg"
        android:layout_width="332dp"
        android:layout_height="102dp"
        android:alpha="1"
        android:scaleX="1.2"
        android:src="@drawable/csbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.05"
        android:text="@string/capitals_title"
        android:textAppearance="@style/mainHeader"
        android:textSize="@dimen/headerSize"
        app:autoSizeMaxTextSize="20pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/lblSettingsHeaderSpot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@color/greyTheme"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/cancel"
        android:textColor="@color/activityBackground"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/imgbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

    <Button
        android:id="@+id/btnUpdate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@color/greyTheme"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/update"
        android:textColor="@color/activityBackground"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCity" />

    <Button
        android:id="@+id/btnEditSpotTypes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/edit_spot_types"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEditSpotLocations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSpotFilter" />

    <Button
        android:id="@+id/btnEditSpotLocations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/edit_spot_locations"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lblSettingsHeaderSpot2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditSpotTypes" />

    <TextView
        android:id="@+id/lblSettingsHeaderSpot"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.05"
        android:text="@string/spot_settings"
        android:textAppearance="@style/mainHeader"
        android:textColor="@color/activityBackground"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="20pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/spnSpotFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName"
        tools:targetApi="lollipop" />

    <Spinner
        android:id="@+id/spnSpotFilter"
        style="@android:style/Widget.Material.Light.Spinner.Underlined"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnEditSpotTypes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblFilter"
        app:layout_constraintTop_toBottomOf="@+id/lblSettingsHeaderSpot" />

    <TextView
        android:id="@+id/lblFilter"

        android:layout_width="88dp"
        android:layout_height="27dp"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.05"
        android:text="@string/filter_by"
        android:textAppearance="@style/mainHeader"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="20pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/btnEditSpotTypes"
        app:layout_constraintEnd_toStartOf="@+id/spnSpotFilter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSettingsHeaderSpot"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/lblFilter2"

        android:layout_width="109dp"
        android:layout_height="29dp"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.05"
        android:text="@string/full_name"
        android:textAppearance="@style/mainHeader"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="20pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/lblFilter3"
        app:layout_constraintEnd_toStartOf="@+id/txtFullName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSettingsHeaderSpot2"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/lblFilter3"

        android:layout_width="109dp"
        android:layout_height="29dp"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.05"
        android:text="@string/home_city"
        android:textAppearance="@style/mainHeader"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="20pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
        app:layout_constraintEnd_toStartOf="@+id/txtCity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFilter2"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/lblSettingsHeaderSpot2"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.05"
        android:text="@string/user_settings"
        android:textAppearance="@style/mainHeader"
        android:textColor="@color/activityBackground"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="20pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/txtFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditSpotLocations"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>